2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Autotools.addin.xml: Track merge of the project
	  pad context menu.

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MakefileData.cs:
	* SimpleProjectMakefileHandler.cs: Track api changes.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/configure.ac.template: Fix for bug #465118 -
	  AM_MAINTANER_MODE missing from generated configure.ac.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/Makefile.include: Added targets for installing
	  satellite assemblies.

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* AutotoolsContext.cs:
	* SolutionDeployer.cs: Read templates from the right
	  directory.

	* MakefileData.cs: Track api changes.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Autotools.addin.xml: Move template file location
	  to a subdirectory to match the location MSBuild and MD copy
	  them.

	* MonoDevelop.Autotools.csproj: Copy templates to output only
	  if newer.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Autotools.mdp:
	* MonoDevelop.Autotools.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Autotools.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Autotools.GenerateMakefilesDialog.cs:
	* gtk-gui/MonoDevelop.Autotools.MakefileOptionPanelWidget.cs:
	* gtk-gui/MonoDevelop.Autotools.TarballBuilderEditorWidget.cs:
	*
	  gtk-gui/MonoDevelop.Autotools.MakefileIntegrationFeatureWidget.cs:
	  Flush.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* CustomMakefile.cs: Make some regex static.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Autotools.mdp: Flush project format changes.

2009-01-19  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
